# mes-final-project

./: CMakeLists.txt  SHARP_MIP.c  display_test.c  lv_drv_conf.h  readme.md  rp2040.cfg  sharp_mip_draw_vertical_line.sal  sharp_mip_lvgl.sal
lib/: lv_conf.h
rp2040/: Device.pex
samd21-afe/: SAMD21-AFE.atsln
samd21-afe/samd21-afe/: SAMD21-AFE.componentinfo.xml  SAMD21-AFE.cproj  atmel_start_pins.h  driver_init.c  driver_init.h  main.c  samd21-afe.atsln
samd21-afe/samd21-afe/.atmelstart/: AtmelStart.gpdsc  atmel_start_config.atstart
samd21-afe/samd21-afe/Config/: RTE_Components.h  hpl_adc_config.h  hpl_eic_config.h  hpl_evsys_config.h  hpl_gclk_config.h  hpl_sercom_config.h  hpl_sysctrl_config.h  peripheral_clk_config.h
samd21-afe/samd21-afe/Debug/: Makefile  SAMD21-AFE(18).elf  SAMD21-AFE(18).lss  SAMD21-AFE(18).map  SAMD21-AFE(18).srec  SAMD21-AFE.elf  SAMD21-AFE.hex  SAMD21-AFE.lss  SAMD21-AFE.map  SAMD21-AFE.srec  atmel_start.d  driver_init.d  main.d  makedep.mk  usb_start.d
samd21-afe/samd21-afe/Debug/examples/: driver_examples.d
samd21-afe/samd21-afe/Debug/hal/src/: hal_crc_sync.d  hal_evsys.d  hal_usart_sync.d  hal_usb_device.d
samd21-afe/samd21-afe/Debug/hpl/dsu/: hpl_dsu.d
samd21-afe/samd21-afe/Debug/hpl/evsys/: hpl_evsys.d
samd21-afe/samd21-afe/Debug/hpl/pac/: hpl_pac.d
samd21-afe/samd21-afe/Debug/hpl/usb/: hpl_usb.d
samd21-afe/samd21-afe/Debug/usb/: usb_protocol.d
samd21-afe/samd21-afe/Debug/usb/class/cdc/device/: cdcdf_acm.d
samd21-afe/samd21-afe/Debug/usb/device/: usbdc.d
samd21-afe/samd21-afe/examples/: driver_examples.c  driver_examples.h
samd21-afe/samd21-afe/samd21-afe/: samd21-afe.cproj
samd21-afe/samd21-afe/samd21-afe/Debug/: Makefile  samd21-afe.elf  samd21-afe.hex  samd21-afe.lss  samd21-afe.map  samd21-afe.srec
samd21-afe/samd21-afe/samd21-afe/Debug/src/: main.d
samd21-afe/samd21-afe/samd21-afe/Debug/src/ASF/common/services/usb/class/cdc/device/: udi_cdc_desc.d
samd21-afe/samd21-afe/samd21-afe/Debug/src/ASF/common2/boards/user_board/: init.d
samd21-afe/samd21-afe/samd21-afe/Debug/src/ASF/common2/services/delay/sam0/: systick_counter.d
samd21-afe/samd21-afe/samd21-afe/Release/: Makefile  makedep.mk  samd21-afe.elf  samd21-afe.hex  samd21-afe.lss  samd21-afe.map  samd21-afe.srec
samd21-afe/samd21-afe/samd21-afe/Release/src/ASF/common/services/usb/class/cdc/device/: udi_cdc.d
samd21-afe/samd21-afe/samd21-afe/Release/src/ASF/common/services/usb/udc/: udc.d
samd21-afe/samd21-afe/samd21-afe/Release/src/ASF/common/utils/stdio/stdio_usb/: stdio_usb.d
samd21-afe/samd21-afe/samd21-afe/Release/src/ASF/sam0/drivers/adc/adc_sam_d_r_h/: adc.d  adc_callback.d
samd21-afe/samd21-afe/samd21-afe/Release/src/ASF/sam0/drivers/usb/stack_interface/: usb_device_udd.d  usb_dual.d
samd21-afe/samd21-afe/samd21-afe/src/: asf.h  main.c
